Got terrain painting to work

--- a/InClass/Terrain/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InClass/Terrain/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,9 +70,170 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+
+[LandscapeEdit]
+BrushRadius=2408.000000
+AlphaBrushAutoRotate=True
+WorldSpacePatternBrushSettings.Origin=X=0.000 Y=0.000
+WorldSpacePatternBrushSettings.bCenterTextureOnOrigin=False
+WorldSpacePatternBrushSettings.RepeatSize=3200.000000
+bUseFlattenTarget=False
+FlattenTarget=0.000000
+TerraceSmooth=0.000100
+TerraceInterval=1.000000
+RampWidth=2000.000000
+RampSideFalloff=0.400000
+bCombinedLayersOperation=True
+SmoothFilterKernelSize=4
+MirrorOp=0
+NewLandscapeMaterialName=
+ImportLandscape_AlphamapType=0
+ShowUnusedLayers=True
+
+[DetailCustomWidgetExpansion]
+LandscapeEditorObject=LandscapeEditorObject.Target Layers.TargetLayers,
+
+[ContentBrowser]
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
+
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Landscape_textures/TerrainMaterial.TerrainMaterial
+
+[PlacementMode]
+RecentlyPlaced=/Engine/BasicShapes/Cube.Cube;/Engine/Transient.ActorFactoryBasicShape_0
+RecentlyPlaced=/Engine/BasicShapes/Plane.Plane;/Engine/Transient.ActorFactoryBasicShape_0
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Actor=True
+LandscapeEditorObject.New Landscape=True
+LandscapeEditorObject.Brush Settings=True
+LandscapeEditorObject.Tool Settings=True
+LandscapeEditorObject.Target Layers=True
+PreviewMaterial.PhysicalMaterial=True
+PreviewMaterial.Material=True
+PreviewMaterial.PhysicalMaterialMask=True
+PreviewMaterial.Translucency=True
+PreviewMaterial.TranslucencySelfShadowing=True
+PreviewMaterial.Usage=True
+PreviewMaterial.Mobile=True
+PreviewMaterial.ForwardShading=True
+PreviewMaterial.Tessellation=True
+PreviewMaterial.Group Sorting=True
+PreviewMaterial.PostProcessMaterial=True
+PreviewMaterial.Refraction=True
+PreviewMaterial.Lightmass=True
+PreviewMaterial.Previewing=True
+PreviewMaterial.ImportSettings=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpressionLandscapeLayerBlend=True
+MaterialExpressionLandscapeLayerBlend.MaterialExpression=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpressionLandscapeLayerCoords=True
+MaterialExpressionLandscapeLayerCoords.MaterialExpression=True
+LandscapeComponent.TransformCommon=True
+LandscapeComponent.Materials=True
+LandscapeComponent.LandscapeComponent=True
+LandscapeComponent.BakedTextures=True
+LandscapeComponent.Lighting=True
+LandscapeComponent.Navigation=True
+LandscapeComponent.Tags=True
+LandscapeComponent.Activation=True
+LandscapeComponent.Cooking=True
+Landscape.TransformCommon=True
+Landscape.Information=True
+Landscape.LOD=True
+Landscape.Landscape=True
+Landscape.LOD Distribution=True
+Landscape.Tessellation=True
+Landscape.Lighting=True
+Landscape.VirtualTexture=True
+Landscape.Rendering=True
+Landscape.Lightmass=True
+Landscape.Collision=True
+Landscape.HierarchicalLOD=True
+Landscape.Replication=True
+Landscape.Input=True
+Landscape.Actor=True
+MaterialExpressionTextureSample.MaterialExpressionTextureSample=True
+MaterialExpressionTextureSample.MaterialExpressionTextureBase=True
+MaterialExpressionTextureSample.MaterialExpression=True
+Texture2D.Compression=True
+Texture2D.Texture=True
+Texture2D.File Path=True
+Texture2D.Adjustments=True
+Texture2D.LevelOfDetail=True
+Texture2D.Compositing=True
+FirstPersonCharacter_C.TransformCommon=True
+FirstPersonCharacter_C.Animation=True
+FirstPersonCharacter_C.Mesh=True
+FirstPersonCharacter_C.Clothing=True
+FirstPersonCharacter_C.Physics=True
+FirstPersonCharacter_C.Collision=True
+FirstPersonCharacter_C.MasterPoseComponent=True
+FirstPersonCharacter_C.Lighting=True
+FirstPersonCharacter_C.ClothingSimulation=True
+FirstPersonCharacter_C.Rendering=True
+FirstPersonCharacter_C.SkinWeights=True
+FirstPersonCharacter_C.Navigation=True
+FirstPersonCharacter_C.VirtualTexture=True
+FirstPersonCharacter_C.Tags=True
+FirstPersonCharacter_C.Activation=True
+FirstPersonCharacter_C.Cooking=True
+FirstPersonCharacter_C.Character Movement (General Settings)=True
+FirstPersonCharacter_C.Character Movement: Walking=True
+FirstPersonCharacter_C.Character Movement: Jumping / Falling=True
+FirstPersonCharacter_C.Character Movement (Networking)=True
+FirstPersonCharacter_C.Character Movement: Swimming=True
+FirstPersonCharacter_C.Character Movement: Flying=True
+FirstPersonCharacter_C.Character Movement: Custom Movement=True
+FirstPersonCharacter_C.Character Movement (Rotation Settings)=True
+FirstPersonCharacter_C.Character Movement: Physics Interaction=True
+FirstPersonCharacter_C.Character Movement=True
+FirstPersonCharacter_C.Character Movement: Avoidance=True
+FirstPersonCharacter_C.RootMotion=True
+FirstPersonCharacter_C.Character Movement: NavMesh Movement=True
+FirstPersonCharacter_C.NavMovement=True
+FirstPersonCharacter_C.Velocity=True
+FirstPersonCharacter_C.PlanarMovement=True
+FirstPersonCharacter_C.MovementComponent=True
+FirstPersonCharacter_C.Shape=True
+FirstPersonCharacter_C.Character=True
+FirstPersonCharacter_C.Camera=True
+FirstPersonCharacter_C.Pawn=True
+FirstPersonCharacter_C.Replication=True
+FirstPersonCharacter_C.Input=True
+FirstPersonCharacter_C.Actor=True
+MeshPaintModeSettings.Visualization=True
+MeshColorPaintingToolProperties.Brush=True
+MeshColorPaintingToolProperties.VertexPainting=True
+MeshColorPaintingToolProperties.ColorPainting=True
+
+[ContentBrowserRecent]
+MRUItem0=/Game/StarterContent/Textures/T_Ground_Grass_D
+MRUItem1=/Game/Landscape_textures/TerrainMaterial
+
+[DetailPropertyExpansion]
+MaterialExpressionLandscapeLayerBlend="\"Object.Layers\" \"Object.Layers.Layers[0]\" \"Object.Layers.Layers[1]\" \"Object.Layers.Layers[2]\" "
+MaterialExpression=
+Object=
+
+[AssetEditorToolkitTabLocation]
+/Game/StarterContent/Textures/T_Ground_Grass_D.T_Ground_Grass_D=1
 
