--- a/SirGawain/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/SirGawain/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -97,6 +97,19 @@ OnlyBuildSelected=False
 OnlyBuildSelectedLevels=False
 OnlyBuildVisibility=False
 
+[WidgetTemplatesExpanded]
+Editor=False
+Input=False
+Lists=False
+Misc=False
+Optimization=False
+Panel=False
+Primitive=False
+Special Effects=False
+Synth=False
+User Created=False
+Advanced=False
+
 [ContentBrowser]
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
@@ -117,6 +130,8 @@ ContentBrowserTab1.ExpandedCollections=
 ContentBrowserTab1.ViewMode=0
 ContentBrowserTab1.ThumbnailSizeScale=0.054386
 ContentBrowserTab1.CurrentViewType=1
+AssetPropertyPicker.ThumbnailSizeScale=0.100000
+AssetPropertyPicker.CurrentViewType=0
 
 [EditorStartup]
 LastLevel=/Game/SirGawain/Levels/CityStart
@@ -138,12 +153,14 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [ContentBrowserRecent]
-MRUItem0=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
-MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
-MRUItem2=/Game/SirGawain/Levels/CityStart
-MRUItem3=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+MRUItem0=/Game/SirGawain/Blueprints/FirstTextWidget
+MRUItem1=/Game/FirstPersonBP/Blueprints/FirstPersonHUD
+MRUItem2=/Game/FirstPersonBP/Blueprints/FirstPersonCharacter
+MRUItem3=/Game/SirGawain/Levels/CityStart
+MRUItem4=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 RecentlyPlaced=/Script/Engine.TextRenderActor;/Engine/Transient.ActorFactoryTextRender_0
 RecentlyPlaced=/Script/Paper2D.PaperCharacter;
 RecentlyPlaced=/Script/Engine.Pawn;/Engine/Transient.ActorFactoryPawn_0
@@ -383,16 +400,198 @@ TextRenderActor.Tags=True
 TextRenderActor.Cooking=True
 TextRenderActor.Replication=True
 TextRenderActor.Input=True
+Image.Layout=True
+Image.Appearance=True
+Image.Accessibility=True
+Image.Behavior=True
+Image.Render Transform=True
+Image.Performance=True
+Image.Clipping=True
+Image.Navigation=True
+Image.Localization=True
+Image.Events=True
+CanvasPanel.Behavior=True
+CanvasPanel.Accessibility=True
+CanvasPanel.Render Transform=True
+CanvasPanel.Performance=True
+CanvasPanel.Clipping=True
+CanvasPanel.Navigation=True
+CanvasPanel.Localization=True
+TextBlock.Layout=True
+TextBlock.Content=True
+TextBlock.Appearance=True
+TextBlock.Accessibility=True
+TextBlock.Performance=True
+TextBlock.Wrapping=True
+TextBlock.Behavior=True
+TextBlock.Render Transform=True
+TextBlock.Clipping=True
+TextBlock.Navigation=True
+TextBlock.Localization=True
+Widget.Layout=True
+Widget.Accessibility=True
+Widget.Behavior=True
+Widget.Render Transform=True
+Widget.Performance=True
+Widget.Clipping=True
+Widget.Navigation=True
+Widget.Localization=True
+ProgressBar.Layout=True
+ProgressBar.Style=True
+ProgressBar.Progress=True
+ProgressBar.Accessibility=True
+ProgressBar.Appearance=True
+ProgressBar.Behavior=True
+ProgressBar.Render Transform=True
+ProgressBar.Performance=True
+ProgressBar.Clipping=True
+ProgressBar.Navigation=True
+ProgressBar.Localization=True
+RichTextBlock.Layout=True
+RichTextBlock.Content=True
+RichTextBlock.Appearance=True
+RichTextBlock.Accessibility=True
+RichTextBlock.Wrapping=True
+RichTextBlock.Behavior=True
+RichTextBlock.Render Transform=True
+RichTextBlock.Performance=True
+RichTextBlock.Clipping=True
+RichTextBlock.Navigation=True
+RichTextBlock.Localization=True
+Border.Layout=True
+Border.Content=True
+Border.Appearance=True
+Border.Accessibility=True
+Border.Behavior=True
+Border.Render Transform=True
+Border.Performance=True
+Border.Clipping=True
+Border.Navigation=True
+Border.Localization=True
+Border.Events=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Clipping=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+PropertyWrapper.Variable=True
+PropertyWrapper.DefaultValueCategory=True
+PropertyWrapper.Events=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.DefaultValueCategory=True
+K2Node_VariableSet.Variable=True
+K2Node_VariableSet.DefaultValueCategory=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Rendering=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+FirstTextWidget_C.Appearance=True
+FirstTextWidget_C.Designer=True
+FirstTextWidget_C.Input=True
+FirstTextWidget_C.Interaction=True
+FirstTextWidget_C.Performance=True
+FirstTextWidget_C.Layout=True
+FirstTextWidget_C.Behavior=True
+FirstTextWidget_C.Render Transform=True
+FirstTextWidget_C.Accessibility=True
+FirstTextWidget_C.Clipping=True
+FirstTextWidget_C.Navigation=True
+FirstTextWidget_C.Localization=True
 
 [DetailPropertyExpansion]
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+Image="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Widget="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Visual="\"Object.Appearance.Brush\" \"Object.Appearance.ColorAndOpacity\" "
+Object=
+TextBlock="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+TextLayoutWidget="\"Object.Appearance.ColorAndOpacity\" \"Object.Appearance.Font\" "
+Button="\"Object.Appearance.ColorAndOpacity\" "
+ContentWidget="\"Object.Appearance.ColorAndOpacity\" "
+PanelWidget="\"Object.Appearance.ColorAndOpacity\" "
+FirstTextWidget_C="\"Object.Appearance.ColorAndOpacity\" "
+UserWidget="\"Object.Appearance.ColorAndOpacity\" "
 
 [AssetEditorToolkitTabLocation]
 /Game/FirstPersonBP/Blueprints/FirstPersonCharacter.FirstPersonCharacter=1
 /Game/FirstPersonBP/Blueprints/FirstPersonHUD.FirstPersonHUD=1
+/Game/SirGawain/Blueprints/FirstTextWidget.FirstTextWidget=1
+/Game/SirGawain/Levels/CityStart.CityStart:PersistentLevel.CityStart=1
 
 [/Script/UnrealEd.BlueprintEditorOptions]
 bHideUnrelatedNodes=False
+
+[UMGEditor.Designer]
+PreviewWidth=1280
+PreviewHeight=720
+PreviewAspectRatio=16:9
+bIsInPortraitMode=False
+ProfileName=
+ScaleFactor=1.000000
+bCanPreviewSwapAspectRatio=False
+
+[UMGSequencerSettings SequencerSettings]
+AutoChangeMode=None
+AllowEditsMode=AllEdits
+KeyGroupMode=KeyChanged
+bKeyInterpPropertiesOnly=False
+KeyInterpolation=Auto
+bAutoSetTrackDefaults=False
+SpawnPosition=SSP_Origin
+bCreateSpawnableCameras=True
+bShowRangeSlider=False
+bIsSnapEnabled=True
+bSnapKeyTimesToInterval=True
+bSnapKeyTimesToKeys=True
+bSnapSectionTimesToInterval=True
+bSnapSectionTimesToSections=True
+bSnapKeysAndSectionsToPlayRange=False
+bSnapPlayTimeToKeys=False
+bSnapPlayTimeToInterval=True
+bSnapPlayTimeToPressedKey=True
+bSnapPlayTimeToDraggedKey=True
+bSnapCurveValueToInterval=True
+bShowSelectedNodesOnly=False
+bRewindOnRecord=True
+ZoomPosition=SZP_CurrentTime
+bAutoScrollEnabled=False
+bLinkCurveEditorTimeRange=False
+bSynchronizeCurveEditorSelection=True
+bIsolateCurveEditorToSelection=True
+LoopMode=SLM_NoLoop
+bKeepCursorInPlayRangeWhileScrubbing=False
+bKeepCursorInPlayRange=True
+bKeepPlayRangeInSectionBounds=True
+ZeroPadFrames=0
+bShowCombinedKeyframes=True
+bInfiniteKeyAreas=False
+bShowChannelColors=False
+bDeleteKeysWhenTrimming=True
+bCleanPlaybackMode=True
+bActivateRealtimeViewports=True
+bEvaluateSubSequencesInIsolation=False
+bRerunConstructionScripts=True
+bShowDebugVisualization=False
+bVisualizePreAndPostRoll=True
+bCompileDirectorOnEvaluate=False
+TrajectoryPathCap=250
+bShowOutlinerInfoColumn=True
+FrameNumberDisplayFormat=Seconds
 
