Added fade from black; added fade to black

--- a/InClass/FadeToBlack/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/InClass/FadeToBlack/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -70,9 +70,56 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[MRU]
+MRUItem0=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
+
+[ContentBrowser]
+AssetDialog.ThumbnailSizeScale=0.100000
+AssetDialog.CurrentViewType=1
+
 [EditorStartup]
 LastLevel=/Game/FirstPersonBP/Maps/FirstPersonExampleMap
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/TestLevelSequence.TestLevelSequence
+OpenAssetsAtExit=/Game/FirstPersonBP/Maps/FirstPersonExampleMap.FirstPersonExampleMap:PersistentLevel.FirstPersonExampleMap
+
+[ContentBrowserRecent]
+MRUItem0=/Game/TestLevelSequence
+
+[DetailCategories]
+LevelSequenceActor.TransformCommon=True
+LevelSequenceActor.General=True
+LevelSequenceActor.Playback=True
+LevelSequenceActor.Cinematic=True
+LevelSequenceActor.BurnInOptions=True
+LevelSequenceActor.Aspect Ratio=True
+LevelSequenceActor.BindingOverrides=True
+LevelSequenceActor.Replication=True
+LevelSequenceActor.InstanceData=True
+LevelSequenceActor.Collision=True
+LevelSequenceActor.Actor=True
+FirstPersonExampleMap_C.Tick=True
+FirstPersonExampleMap_C.Replication=True
+FirstPersonExampleMap_C.Actor=True
+FirstPersonExampleMap_C.Input=True
+K2Node_VariableGet.Variable=True
+K2Node_VariableGet.Events=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+TriggerBox.TransformCommon=True
+TriggerBox.Shape=True
+TriggerBox.Navigation=True
+TriggerBox.Physics=True
+TriggerBox.Collision=True
+TriggerBox.Tags=True
+TriggerBox.Rendering=True
+TriggerBox.Cooking=True
+TriggerBox.Replication=True
+TriggerBox.Input=True
+TriggerBox.Actor=True
+
+[PlacementMode]
+RecentlyPlaced=/Script/Engine.TriggerBox;/Engine/Transient.ActorFactoryTriggerBox_0
 
